--- a/subsclife/package.json
+++ b/subsclife/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.26.1",
     "react-transition-group": "^4.4.5",
     "styled-components": "^6.1.13",
+    "styled-reset": "^4.5.2",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
