--- a/subsclife/package.json
+++ b/subsclife/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-transition-group": "^4.4.5",
